Fix health and probability to hit for each soldier rank. Also polish.